@@ -2,11 +2,13 @@ package com.ccommit.price_tracking_server.exception.handler;
 
 import com.ccommit.price_tracking_server.DTO.CommonResponseDTO;
 import com.ccommit.price_tracking_server.exception.ExceptionDetailMessage;
+import com.ccommit.price_tracking_server.exception.InvalidCategoryLevelException;
 import com.ccommit.price_tracking_server.exception.PriceTrackingServerException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
@@ -34,9 +36,9 @@ public class GlobalExceptionHandler {
             }
         }
 
-        // NotBlank 오류가 없으면 형식이 잘못된 경우 (Pattern, Email 등)
+        // NotBlank 오류가 없으면 형식이 잘못된 경우 (Pattern, Email, Size 등)
         if (!fieldErrors.isEmpty()) {
-            FieldError error = fieldErrors.get(0); // 첫 번째 오류를 처리
+            FieldError error = fieldErrors.getFirst(); // 첫 번째 오류를 처리
             CommonResponseDTO<?> errorResponse = validationErrorHandler.handleFieldError(error);
             log.error(errorResponse.toString());
             return ResponseEntity.ok(errorResponse);
@@ -53,6 +55,15 @@ public class GlobalExceptionHandler {
     public ResponseEntity<CommonResponseDTO<?>> handlePriceTrackingServerException(PriceTrackingServerException ex) {
         CommonResponseDTO<?> errorResponse = new CommonResponseDTO<>(null,
                 ex.getErrorCode(), ExceptionDetailMessage.getExceptionMessage(ex.getErrorCode()), 0);
+        log.error(errorResponse.toString());
+        return ResponseEntity.ok(errorResponse);
+    }
+
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<CommonResponseDTO<?>> handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
+        InvalidCategoryLevelException invalidCategoryLevelException = new InvalidCategoryLevelException();
+        CommonResponseDTO<?> errorResponse = new CommonResponseDTO<>(null,
+                invalidCategoryLevelException.getErrorCode(), ExceptionDetailMessage.getExceptionMessage(invalidCategoryLevelException.getErrorCode()), 0);
         log.error(errorResponse.toString());
         return ResponseEntity.ok(errorResponse);
     }
